# healthpartners-interview

./: .gitignore  OUTFILE  README.md  profiler_output_download_datasets_fn  pyproject.toml
database/: runtime_log.database
experiments/: experiment_ijson_extract_top_level_objects.py  experiment_pyinstrument_pytest.py  experiment_pyinstrument_simple.py  experiment_speedscope_fib.py  experiment_structlog_logcapture.py  experiment_writing_to_file_title_has_colon.py  show_off.py  structlog_logcapture.py
experiments/data/in/: you_json_file.json
performance_profiles/: OUTFILE  performance_profiles.speedscope.json  profiler_output_download_datasets.html  profiler_output_download_datasets.speedscope.json
src/healthpartners_interview/: __init__.py  __main__.py  custom_logger.py  download.py  download_datasets.py  download_themed_csv.py  last_run_logger.py  process_datasets.py  process_themed_dataset.py  profiler.py
src/healthpartners_interview/decorators/: profiling.py
src/healthpartners_interview/pydantic_models/: models.py
src/healthpartners_interview_data_engineer_take_home/: __init__.py  download.py
src/pydantic_models/: models.py
tests/: test_download_datasets.py  test_hello.py
