[project]
name = "healthpartners-interview-data-engineer-take-home"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Edmund Leibert III", email = "43337293+lost-in-the-canvas@users.noreply.github.com" }
]
dependencies = [
    "black>=24.8.0",
    "requests>=2.32.3",
    "pytest>=8.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/healthpartners_interview_data_engineer_take_home"]
