[project]
name = "healthpartners-interview"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Edmund Leibert III", email = "43337293+lost-in-the-canvas@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.32.3",
    "pydantic>=2.8.2",
    "pyinstrument>=4.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"main" = "healthpartners_interview:main"
"profile" = "healthpartners_interview.profiler:run_profiler"

[tool.rye.scripts]
devmain = "python -m healthpartners_interview"
devprofile = "'C:/Users/edmun/AppData/Local/Programs/Python/Python313/Scripts/pyinstrument.exe' -r speedscope -o OUTFILE -m 'src.healthpartners_interview.__init__'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/healthpartners_interview"]
